# models/Kand.model.js
@@ -1,0 +1,14 @@
+const mongoose = require("mongoose");
+const Schema = mongoose.Schema;
+const Chapter = require("./Chapter.model");
+
+const kandSchema = new Schema(
+  {
+    name: { type: String, required: true },
+    kandQuiz: { type: Boolean, default: false },
+    Chapter: [{ type: mongoose.Schema.Types.ObjectId, ref: "Chapter" }],
+  },
+  { versionKey: false }
+);
+
+module.exports = mongoose.model("Kand", kandSchema);
